# hello-world-template-xpack

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README-DEVELOPER.md  README-MAINTAINER.md  README.md  index.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: feature_request.md  questions-and-general-support.md
.github/workflows/: CI.yml  README.md  ci.yml
assets/sources/: CMakeLists-liquid.txt  LICENSE.liquid  README-liquid.md  a.npmignore  meson-liquid.build  package-liquid.json
assets/sources/autotools/: configure
assets/sources/autotools/make-template/: makefile-liquid
assets/sources/autotools/make-template/libs/adder/src/: folder.mk
assets/sources/autotools/make-template/src/: folder-liquid.mk
assets/sources/cmake/toolchains/: clang.cmake  gcc.cmake
assets/sources/include/: hello-world.h
assets/sources/libs/: meson.build
assets/sources/libs/adder/: meson-liquid.build
assets/sources/libs/adder/src/: add.c
assets/sources/meson/toolchains/: clang-darwin.ini  clang-win32.ini  gcc-darwin.ini  gcc-win32.ini
assets/sources/meta/: CMakeLists-liquid.txt  configure  meson-liquid.build  toolchain-gcc-meson.ini  toolchain-gcc.cmake
assets/sources/meta/make-template/: makefile-liquid
assets/sources/src/: hello-world.c  hello-world.cpp
lib/: template.js
test/: test.js
